cuda_ops_test/gen_bang_results/82_conv_depthwise_2D_square_input_square_kernel-output.txt
warning: CUDA version 12.1 is only partially supported
./cuda_ops/82_conv_depthwise_2D_square_input_square_kernel.cu:2:10: fatal error: 'ATen/cuda/CUDAContext.h' file not found
    2 | #include <ATen/cuda/CUDAContext.h>
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~
